syntax = "proto3";

package alpha.transport.rpc;

import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "com.alpha.transport.rpc";
option go_package = "alpha/transport/rpc;rpc";

// Goal: نقل إشارات وقرارات الاستراتيجية إلى خط القرار والتنفيذ.
// Dependencies: Execution Engine, Risk Manager, Strategy Core

// -------------------------------
// Brain Service
// -------------------------------
// أوامر العقل (Signals, Decisions)
service BrainService {
  // Publish an AI/strategy signal to the decision pipeline.
  rpc PublishSignal(PublishSignalRequest) returns (PublishSignalResponse);

  // Publish a final decision produced by the strategy brain.
  rpc PublishDecision(PublishDecisionRequest) returns (PublishDecisionResponse);

  // Stream decisions to internal subscribers (optional integration point).
  rpc StreamDecisions(StreamDecisionsRequest) returns (stream DecisionEnvelope);
}

enum Side {
  SIDE_UNSPECIFIED = 0;
  SIDE_BUY = 1;
  SIDE_SELL = 2;
}

enum DecisionAction {
  DECISION_ACTION_UNSPECIFIED = 0;
  DECISION_ACTION_ENTER = 1;
  DECISION_ACTION_EXIT = 2;
  DECISION_ACTION_HOLD = 3;
  DECISION_ACTION_REBALANCE = 4;
}

enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  PRIORITY_LOW = 1;
  PRIORITY_NORMAL = 2;
  PRIORITY_HIGH = 3;
  PRIORITY_CRITICAL = 4;
}

message RequestContext {
  string request_id = 1;
  string trace_id = 2;
  string source_service = 3;
  string source_region = 4;
  int64 timestamp_ms = 5;
}

message ModelMetadata {
  string model_name = 1;
  string model_version = 2;
  string feature_set_hash = 3;
  double expected_slippage_bps = 4;
}

message PublishSignalRequest {
  RequestContext ctx = 1;
  string strategy_id = 2;
  string portfolio_id = 3;
  string symbol = 4;
  Side side = 5;
  double confidence = 6; // [0..1]
  double score = 7;
  Priority priority = 8;
  ModelMetadata model = 9;
  google.protobuf.Struct factors = 10;
  int64 signal_time_ms = 11;
  int64 expiry_time_ms = 12;
}

message ValidationIssue {
  string field = 1;
  string code = 2;
  string message = 3;
}

message PublishSignalResponse {
  bool accepted = 1;
  string signal_id = 2;
  string status = 3;
  repeated ValidationIssue issues = 4;
  string reason = 5;
}

message RiskSummary {
  double projected_notional = 1;
  double projected_leverage = 2;
  double projected_var_1d = 3;
}

message PublishDecisionRequest {
  RequestContext ctx = 1;
  string decision_id = 2;
  string signal_id = 3;
  string strategy_id = 4;
  DecisionAction action = 5;
  string symbol = 6;
  Side side = 7;
  double target_quantity = 8;
  double limit_price = 9;
  RiskSummary risk = 10;
  google.protobuf.Struct metadata = 11;
  int64 decision_time_ms = 12;
}

message PublishDecisionResponse {
  bool accepted = 1;
  string decision_id = 2;
  string execution_plan_id = 3;
  string status = 4;
  string trace_id = 5;
  repeated ValidationIssue issues = 6;
}

message StreamDecisionsRequest {
  string consumer_id = 1;
  repeated string strategy_ids = 2;
  repeated string symbols = 3;
  bool include_hold = 4;
}

message DecisionEnvelope {
  RequestContext ctx = 1;
  PublishDecisionRequest decision = 2;
}
